Melhorando terceira parte

--- a/index.html
+++ b/index.html
@@ -9,9 +9,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" type="text/css" href="style.css">
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="css/global.css">
+    <link rel="stylesheet" href="css/components/titles.css">
+    <link rel="stylesheet" href="css/components/icons.css">
+
     <title>Portfólio</title>
 </head>
 
@@ -202,11 +207,48 @@
                             </div>
                         </div>
                         <div class="conteudo-terciario-parte-um-principal-conhecimentos">
+                            <h5 class="conteudo-terciario-parte-um-principal-tecnologias-titulo">OUTROS</h5>
                             <div class="conteudo-terciario-parte-um-principal-conhecimentos-frontend">
-
+                                <h5 class="titulo-h4">Frontend</h5>
+                                <ul class="lista-conhecimentos">
+                                    <li class="texto-ssize">Typescript</li>
+                                    <li class="texto-ssize">Angular</li>
+                                    <li class="texto-ssize">Vue</li>
+                                    <li class="texto-ssize">React</li>
+                                    <li class="texto-ssize">Ajax</li>
+                                    <li class="texto-ssize">Bootstrap</li>
+                                    <li class="texto-ssize">JQuery</li>
+                                </ul>
                             </div>
                             <div class="conteudo-terciario-parte-um-principal-conhecimentos-backend">
-                                
+                                <h5 class="titulo-h4">Backend</h5>
+                                <ul class="lista-conhecimentos">
+                                    <li class="texto-ssize">Springboot</li>
+                                    <li class="texto-ssize">JPA Hibernate</li>
+                                    <li class="texto-ssize">Testes Unitários</li>                                    
+                                    <li class="texto-ssize">MySQL</li>
+                                    <li class="texto-ssize">MongoDB</li>
+                                    <li class="texto-ssize">Redis</li>
+
+                                </ul>
+                            </div>
+                            <div class="conteudo-terciario-parte-um-principal-conhecimentos-uxui">
+                                <h5 class="titulo-h4">UX/UI</h5>
+                                <ul class="lista-conhecimentos">
+                                    <li class="texto-ssize">Figma</li>
+                                    <li class="texto-ssize">Wordpress</li>
+                                </ul>
+                            </div>
+                            <div class="conteudo-terciario-parte-um-principal-conhecimentos-outros">
+                                <h5 class="titulo-h4">Outros</h5>
+                                <ul class="lista-conhecimentos-horizontal">
+                                    <li class="texto-ssize">Github</li>
+                                    <li class="texto-ssize">Docker</li>
+                                    <li class="texto-ssize">Kubernets</li>
+                                    <li class="texto-ssize">AWS</li>
+                                    <li class="texto-ssize">Clean code</li>
+                                    <li class="texto-ssize">Design patterns</li>
+                                </ul>
                             </div>
                         </div>
                     </div>
