Refatorando ainda mais primeira e segunda seção

--- a/index.html
+++ b/index.html
@@ -25,125 +25,90 @@
         <div class="cabecalho">
             <img class="cabecalho-logo" src="/imagens/logo-principal.png">
             <nav class="cabecalho-menu">
-                <a class="cabecalho-menu-item" href="#conteudo-principal">INICIO</a>
-                <a class="cabecalho-menu-item" href="#conteudo-secundario">MEUS PROJETOS</a>
-                <a class="cabecalho-menu-item" href="#conteudo-terciario">HABILIDADES</a>
+                <a class="cabecalho-menu-item" href="#secao-um">INICIO</a>
+                <a class="cabecalho-menu-item" href="#secao-dois">MEUS PROJETOS</a>
+                <a class="cabecalho-menu-item" href="#secao-tres">HABILIDADES</a>
             </nav>
         </div>
     </header>
 
     <main id="conteudo">
 
-        <section id="conteudo-principal">
-            <div class="conteudo-principal-apresentacao-um">
-                <h1 class="conteudo-principal-apresentacao-um-texto">
-                    <div class="conteudo-principal-apresentacao-um-texto-nome">LUIZ EDUARDO</div>
-                    <div class="conteudo-principal-apresentacao-um-texto-ocupacao">DESENVOLVEDOR WEB FULLSTACK</div>
+        <section id="secao-um">
+
+            <div class="secao-um-container-um">
+                <h1 class="secao-um-container-um-texto">
+                    <p class="secao-um-container-um-nome">LUIZ EDUARDO</p>
+                    <p class="secao-um-container-um-profissao">DESENVOLVEDOR WEB FULLSTACK</p>
                 </h1>
-                <div class="conteudo-principal-apresentacao-um-logos">
-                    <a class="conteudo-principal-apresentacao-um-logos-botao"
-                        href="https://www.linkedin.com/in/luizfnds/" target="_blank"><i
-                            class="fa-brands fa-linkedin-in"></i></a>
-                    <a class="conteudo-principal-apresentacao-um-logos-botao" href="https://github.com/Luizfnds"
-                        target="_blank"><i class="fa-brands fa-github"></i></a>
-                    <a class="conteudo-principal-apresentacao-um-logos-botao" href="downloads/Curriculo-2022.2.pdf"
-                        download="Curriculo-2022.pdf" type="application/pdf"><i
-                            class="fa-solid fa-file-arrow-down"></i></a>
+                <div class="secao-um-container-um-links">
+                    <a class="secao-um-container-um-links-btn" href="https://www.linkedin.com/in/luizfnds/" target="_blank">
+                        <i class="fa-brands fa-linkedin-in"></i>
+                    </a>
+                    <a class="secao-um-container-um-links-btn" href="https://github.com/Luizfnds" target="_blank">
+                        <i class="fa-brands fa-github"></i>
+                    </a>
+                    <a class="secao-um-container-um-links-btn" href="downloads/Curriculo-2022.2.pdf" download="Curriculo-2022.pdf" type="application/pdf">
+                        <i class="fa-solid fa-file-arrow-down"></i>
+                    </a>
                 </div>
             </div>
-            <div class="conteudo-principal-apresentacao-dois">
-                <img class="conteudo-principal-apresentacao-dois-retrato" src="">
-                <h2 class="conteudo-principal-apresentacao-dois-titulo">SOBRE MIM</h2>
-                <p class="conteudo-principal-apresentacao-dois-texto">
+
+            <div class="secao-um-container-dois">
+                <img class="secao-um-container-dois-foto" src="">
+                <h2 class="secao-um-container-dois-titulo">SOBRE MIM</h2>
+                <p class="secao-um-container-dois-texto text-msize">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                     aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
                     cillum dolore eu fugiat nulla pariatur.
                 </p>
             </div>
+            
         </section>
 
-        <section id="conteudo-secundario">
-            <div class="swiper mySwiper conteudo-secundario">
-                <div class="conteudo-secundario-titulo">MEUS PROJETOS</div>
-                <div class="swiper-wrapper conteudo-secundario-projetos">
-                    <div class="swiper-slide conteudo-secundario-projetos-slide">
-                        <img class="conteudo-secundario-projetos-slide-imagem" src="imagens/imagem-teste.png">
-                        <div class="conteudo-secundario-projetos-slide-conteudo">
-                            <div class="conteudo-secundario-projetos-slide-conteudo-um">
-                                <h4 class="conteudo-secundario-projetos-slide-conteudo-um-titulo">Descrição</h4>
-                                <p class="conteudo-secundario-projetos-slide-conteudo-um-texto">Lorem ipsum dolor sit
+        <section id="secao-dois">
+
+            <div class="swiper mySwiper secao-dois-container">
+                <h2 class="secao-dois-titulo">MEUS PROJETOS</h2>
+                <div class="swiper-wrapper secao-dois-projetos">
+                    <div class="swiper-slide secao-dois-projetos-slide">
+                        <img class="secao-dois-projetos-slide-imagem" src="imagens/imagem-teste.png">
+                        <div class="secao-dois-projetos-slide-conteudo">
+                            <div class="secao-dois-projetos-slide-conteudo-container-um">
+                                <h3 class="secao-dois-projetos-slide-conteudo-titulo">Descrição</h3>
+                                <p class="secao-dois-projetos-slide-conteudo-texto">Lorem ipsum dolor sit
                                     amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                                     dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
                                     laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
                                     reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
                                 <p></p>
                             </div>
-                            <div class="conteudo-secundario-projetos-slide-conteudo-dois">
-                                <h4 class="conteudo-secundario-projetos-slide-conteudo-dois-titulo">Links</h4>
-                                <div class="conteudo-secundario-projetos-slide-conteudo-dois-botoess">
-                                    <button class="conteudo-secundario-projetos-slide-conteudo-dois-botoes"><i
+                            <div class="secao-dois-projetos-slide-conteudo-container-dois">
+                                <h3 class="secao-dois-projetos-slide-conteudo-titulo">Links</h3>
+                                <div class="secao-dois-projetos-slide-conteudo-botoes">
+                                    <button class="secao-dois-projetos-slide-conteudo-botao"><i
                                             class="fa-solid fa-code"></i>Código fonte</button>
-                                    <button class="conteudo-secundario-projetos-slide-conteudo-dois-botoes"><i
-                                            class="fa-solid fa-file"></i>Documentação</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="swiper-slide conteudo-secundario-projetos-slide">
-                        <img class="conteudo-secundario-projetos-slide-imagem" src="imagens/imagem-teste1.png">
-                        <div class="conteudo-secundario-projetos-slide-conteudo">
-                            <div class="conteudo-secundario-projetos-slide-conteudo-um">
-                                <h4 class="conteudo-secundario-projetos-slide-conteudo-um-titulo">Descrição</h4>
-                                <p class="conteudo-secundario-projetos-slide-conteudo-um-texto">Lorem ipsum dolor sit
-                                    amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                                    laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-                                    reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-                                <p></p>
-                            </div>
-                            <div class="conteudo-secundario-projetos-slide-conteudo-dois">
-                                <h4 class="conteudo-secundario-projetos-slide-conteudo-dois-titulo">Links</h4>
-                                <div class="conteudo-secundario-projetos-slide-conteudo-dois-botoess">
-                                    <button class="conteudo-secundario-projetos-slide-conteudo-dois-botoes"><i
-                                            class="fa-solid fa-code"></i>Código fonte</button>
-                                    <button class="conteudo-secundario-projetos-slide-conteudo-dois-botoes"><i
-                                            class="fa-solid fa-file"></i>Documentação</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="swiper-slide conteudo-secundario-projetos-slide">
-                        <img class="conteudo-secundario-projetos-slide-imagem" src="imagens/imagem-teste-3.png">
-                        <div class="conteudo-secundario-projetos-slide-conteudo">
-                            <div class="conteudo-secundario-projetos-slide-conteudo-um">
-                                <h4 class="conteudo-secundario-projetos-slide-conteudo-um-titulo">Descrição</h4>
-                            </div>
-                            <div class="conteudo-secundario-projetos-slide-conteudo-dois">
-                                <h4 class="conteudo-secundario-projetos-slide-conteudo-dois-titulo">Links</h4>
-                                <div class="conteudo-secundario-projetos-slide-conteudo-dois-botoess">
-                                    <button class="conteudo-secundario-projetos-slide-conteudo-dois-botoes"><i
-                                            class="fa-solid fa-code"></i>Código fonte</button>
-                                    <button class="conteudo-secundario-projetos-slide-conteudo-dois-botoes"><i
+                                    <button class="secao-dois-projetos-slide-conteudo-botao"><i
                                             class="fa-solid fa-file"></i>Documentação</button>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="swiper-button-prev conteudo-secundario-projetos-botao-esquerdo"></div>
-                <div class="swiper-button-next conteudo-secundario-projetos-botao-direito"></div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
                 <div class="swiper-pagination"></div>
             </div>
         </section>
 
         <section id="conteudo-terciario">
-            <h6 class="conteudo-terciario-titulo">HABILIDADES</h6>
+            <h2 class="conteudo-terciario-titulo">HABILIDADES</h2>
             <div class="conteudo-terciario">
                 <div class="conteudo-terciario-parte-um">
                     <div class="conteudo-terciario-parte-um-principal">
                         <div class="conteudo-terciario-parte-um-principal-tecnologias">
-                            <h5 class="conteudo-terciario-parte-um-principal-tecnologias-titulo">PRINCIPAIS</h5>
+                            <h3 class="conteudo-terciario-parte-um-principal-tecnologias-titulo">PRINCIPAIS</h3>
                             <div class="conteudo-terciario-parte-um-principal-tecnologias-sla">
                                 <div class="conteudo-terciario-parte-um-principal-tecnologias-parte-um">
                                     <div class="conteudo-terciario-parte-um-principal-tecnologias-parte-um-nome">
@@ -207,47 +172,47 @@
                             </div>
                         </div>
                         <div class="conteudo-terciario-parte-um-principal-conhecimentos">
-                            <h5 class="conteudo-terciario-parte-um-principal-tecnologias-titulo">OUTROS</h5>
+                            <h3 class="conteudo-terciario-parte-um-principal-tecnologias-titulo">OUTROS</h3>
                             <div class="conteudo-terciario-parte-um-principal-conhecimentos-frontend">
-                                <h5 class="titulo-h4">Frontend</h5>
+                                <h4 class="titulo-h4">Frontend</h4>
                                 <ul class="lista-conhecimentos">
-                                    <li class="texto-ssize">Typescript</li>
-                                    <li class="texto-ssize">Angular</li>
-                                    <li class="texto-ssize">Vue</li>
-                                    <li class="texto-ssize">React</li>
-                                    <li class="texto-ssize">Ajax</li>
-                                    <li class="texto-ssize">Bootstrap</li>
-                                    <li class="texto-ssize">JQuery</li>
+                                    <li class="text-ssize">Typescript</li>
+                                    <li class="text-ssize">Angular</li>
+                                    <li class="text-ssize">Vue</li>
+                                    <li class="text-ssize">React</li>
+                                    <li class="text-ssize">Ajax</li>
+                                    <li class="text-ssize">Bootstrap</li>
+                                    <li class="text-ssize">JQuery</li>
                                 </ul>
                             </div>
                             <div class="conteudo-terciario-parte-um-principal-conhecimentos-backend">
-                                <h5 class="titulo-h4">Backend</h5>
+                                <h4 class="titulo-h4">Backend</h4>
                                 <ul class="lista-conhecimentos">
-                                    <li class="texto-ssize">Springboot</li>
-                                    <li class="texto-ssize">JPA Hibernate</li>
-                                    <li class="texto-ssize">Testes Unitários</li>                                    
-                                    <li class="texto-ssize">MySQL</li>
-                                    <li class="texto-ssize">MongoDB</li>
-                                    <li class="texto-ssize">Redis</li>
+                                    <li class="text-ssize">Springboot</li>
+                                    <li class="text-ssize">JPA Hibernate</li>
+                                    <li class="text-ssize">Testes Unitários</li>                                    
+                                    <li class="text-ssize">MySQL</li>
+                                    <li class="text-ssize">MongoDB</li>
+                                    <li class="text-ssize">Redis</li>
 
                                 </ul>
                             </div>
                             <div class="conteudo-terciario-parte-um-principal-conhecimentos-uxui">
-                                <h5 class="titulo-h4">UX/UI</h5>
+                                <h4 class="titulo-h4">UX/UI</h4>
                                 <ul class="lista-conhecimentos">
-                                    <li class="texto-ssize">Figma</li>
-                                    <li class="texto-ssize">Wordpress</li>
+                                    <li class="text-ssize">Figma</li>
+                                    <li class="text-ssize">Wordpress</li>
                                 </ul>
                             </div>
                             <div class="conteudo-terciario-parte-um-principal-conhecimentos-outros">
-                                <h5 class="titulo-h4">Outros</h5>
+                                <h4 class="titulo-h4">Outros</h4>
                                 <ul class="lista-conhecimentos-horizontal">
-                                    <li class="texto-ssize">Github</li>
-                                    <li class="texto-ssize">Docker</li>
-                                    <li class="texto-ssize">Kubernets</li>
-                                    <li class="texto-ssize">AWS</li>
-                                    <li class="texto-ssize">Clean code</li>
-                                    <li class="texto-ssize">Design patterns</li>
+                                    <li class="text-ssize">Github</li>
+                                    <li class="text-ssize">Docker</li>
+                                    <li class="text-ssize">Kubernets</li>
+                                    <li class="text-ssize">AWS</li>
+                                    <li class="text-ssize">Clean code</li>
+                                    <li class="text-ssize">Design patterns</li>
                                 </ul>
                             </div>
                         </div>
@@ -255,8 +220,8 @@
                 </div>
                 <div class="conteudo-terciario-parte-dois">
                     <div class="conteudo-terciario-parte-dois-formacoes">
-                        <h5 class="conteudo-terciario-parte-dois-formacoes-titulo"><i
-                                class="fa-solid fa-graduation-cap"></i>FORMAÇÕES</h5>
+                        <h3 class="conteudo-terciario-parte-dois-formacoes-titulo"><i
+                                class="fa-solid fa-graduation-cap"></i>FORMAÇÕES</h3>
                         <div class="conteudo-terciario-parte-dois-formacoes-conteudo">
                             <p>Análise e desenvolvimento de sistemas</p>
                             <p>Universidade UnidomPedro</p>
@@ -264,8 +229,8 @@
                         </div>
                     </div>
                     <div class="conteudo-terciario-parte-dois-certificacoes">
-                        <h5 class="conteudo-terciario-parte-dois-certificacoes-titulo"><i
-                                class="fa-solid fa-award"></i>CERTIFICAÇÕES</h5>
+                        <h3 class="conteudo-terciario-parte-dois-certificacoes-titulo"><i
+                                class="fa-solid fa-award"></i>CERTIFICAÇÕES</h3>
                         <div class="conteudo-terciario-parte-dois-formacoes-conteudo">
 
                         </div>
